<resources>
    <string name="app_name">MijD</string>
    <string name="action_signup">Start</string>
    <string name="hint_name">Name</string>
    <string name="name_mandatory">Name is Mandatory</string>
    <string name="id_mandatory">ID Mandatory</string>
    <string name="hint_id">National ID</string>
    <string name="hint_dob">DOB</string>
    <string name="hint_identity">National Identity</string>
    <string name="dob_mandatory">Date of Birth is Mandatory</string>
    <string name="invalid_dob">Invalid Date of Birth</string>
    <string name="action_register">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_digid">DigiD</string>
    <string name="hint_register">Register</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="registration_successful">Registration Success</string>
    <string name="registering">Registering</string>
    <string name="hint_profile">Profile Name</string>
    <string name="hint_new_profile">New Profile</string>
    <string name="profile_mandatory">Profile Name is Mandatory</string>
    <string name="show_qr">QR</string>
    <string name="tap_and_send">Tap</string>
    <string name="add_profile">Create Profile</string>
    <string name="no_profiles_create_profile">No profiles, Create One</string>
    <string name="new_profile">New Profile</string>
    <string name="hint_include_DOB">DOB</string>
    <string name="hint_include_name">Include Name</string>
    <string name="hint_include_bsn">BSN</string>
    <string name="hint_include_blood_group">Blood Group</string>
    <string name="hint_include_refugee_tatus">Refugee Status</string>
    <string name="scan_qr">Scan QR</string>
</resources>
