<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    tools:context=".IdentityFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hint_new_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/profileNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_profile"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/digitdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_digid"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/nameCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_include_name"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:id="@+id/bsnCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_include_bsn"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:id="@+id/dobCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_include_DOB"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/bloodGroupCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_include_blood_group"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/refugeeStatusCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_include_refugee_tatus"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/action_register"
        android:textColor="@android:color/white" />

</LinearLayout>
